resources_codefresh-round3/cdp-codefresh-round3-default-git-source.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdp-codefresh-round3-default-git-source
spec:
  rules:
    - http:
        paths:
          - path: /webhooks/codefresh-round3/cf-pipeline2
            backend:
              service:
                name: cf-pipeline2-eventsource-svc
                port:
                  number: 80
            pathType: Prefix
